name:                 lol-test
version:              0.3.0.0
synopsis:             Test suite for the Λ ○ λ (Lol) cryptography library
-- description:
homepage:             https://github.com/cpeikert/Lol
license:              GPL-2
license-file:         LICENSE
author:               Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:           Eric Crockett <ecrockett0@gmail.com>
-- copyright:
category:             Crypto
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10


flag c
  description: Enable the C backend
  default:     True

flag repa
  description: Enable the Repa backend
  default:     True

flag accelerate
  description: Enable Accelerate backend
  default:     False


executable lol-test
  default-language:   Haskell2010
  main-is:            Main.hs
  hs-source-dirs:     src, utils
  other-modules:
    -- utils
    Apply
    Gen
    Harness.Cyc
    Utils

    -- tests
    CycTests
    TensorTests
    TestTypes
    Tests
    ZqTests

  ghc-options: -threaded -rtsopts

  build-depends:
      base                       == 4.8.*
    , lol                        == 0.3.*
    --
    , constraints
    , deepseq                    >= 1.4.1.1 && < 1.5
    , DRBG
    , MonadRandom                >= 0.2     && < 0.5
    , mtl                        >= 2.2.1   && < 2.3
    , QuickCheck                 >= 2.8     && < 2.9
    , random                     >= 1.1     && < 1.2
    , repa                       == 3.4.*
    , singletons                 >= 1.1.2.1 && < 2.1
    , test-framework             >= 0.8     && < 0.9
    , test-framework-quickcheck2 >= 0.3     && < 0.4
    , vector                     == 0.11.*

  if flag(c)
    cpp-options: -DC_TENSOR_ENABLE

  if flag(repa)
    cpp-options: -DREPA_TENSOR_ENABLE

  if flag(accelerate)
    cpp-options: -DACCELERATE_TENSOR_ENABLE
    build-depends:
      lol-accelerate             == 0.1.*


-- vim: nospell

